Fixed a css width property on lower screen from 80% to 100%. To fix screen overflow, numToDisplay() function stops adding values over 9 digits.

--- a/style.css
+++ b/style.css
@@ -80,7 +80,6 @@ button {
 
 #lowerScreen {
     height: 50%;
-    width: 80%;
     padding: 0.5rem 0.5rem;
     font-size: 3rem;    
     display: flex;
